# energy-forecasting-mlops

./: .gitignore  GEMINI.md  README.md  databricks.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  data_ingestion.yml  deploy.yml  ingest.yml  ingestion_hourly.yml
dashboard/: energy_forecast.sql
notebooks/: 01_ingest.py  02_transform.py  03_drift_check.py  04_predict.py  05_train_prophet.py  06_train_lgbm.py  07_evaluate.py
src/: api_client.py  config.py  drift.py  features.py
tests/: test_api_client.py  test_drift.py  test_features.py  test_ingest_logic.py
