[project]
name = "energy-forecasting-mlops"
version = "0.1.0"
description = "Hourly electricity consumption forecasting for Hungary"
requires-python = ">=3.11"
dependencies = [
    "prophet==1.1.5",
    "lightgbm==4.3.0",
    "evidently==0.4.16",
    "mlflow==2.13.0",
    "requests==2.31.0",
    "holidays==0.46",
    "shap==0.45.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "pyarrow>=14.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "responses>=0.25.0",
    "freezegun>=1.4.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
